objects/Individual_Ticket_Info__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Event_Attendee_Mapping__c</fullName>
        <label>Event_Attendee_Mapping</label>
        <referenceTo>Event_Attendee_Mapping__c</referenceTo>
        <relationshipLabel>Individual Ticket Info</relationshipLabel>
        <relationshipName>Individual_Ticket_Info</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsCheckedIn__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCheckedIn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Input__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Input</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_Date_Time__c</fullName>
        <label>Latest Date Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refund_Amount__c</fullName>
        <label>Refund Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Refund_Date__c</fullName>
        <label>Refund Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Refund_Mode__c</fullName>
        <label>Refund Mode</label>
        <picklist>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Registration_Info__c</fullName>
        <label>Registration Info</label>
        <referenceTo>Dummay__c</referenceTo>
        <relationshipLabel>Individual Ticket Info</relationshipLabel>
        <relationshipName>Individual_Ticket_Info</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Scanned_by__c</fullName>
        <label>Scanned by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Individual_Ticket_Info</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Seat__c</fullName>
        <label>Seat Number</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ticket_Session_Mapping__c</fullName>
        <label>Ticket_Session_Mapping</label>
        <referenceTo>Ticket_Session_Mapping__c</referenceTo>
        <relationshipLabel>Individual Ticket Info</relationshipLabel>
        <relationshipName>Individual_Ticket_Info</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <formula>IF( isCancelled__c == TRUE, Amount__c - Refund_Amount__c , Amount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>isCancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isCancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isItem__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isItem</label>
        <type>Checkbox</type>
    </fields>
    <label>Individual Ticket Info</label>
    <listViews>
        <fullName>LICREE</fullName>
        <columns>NAME</columns>
        <columns>Registration_Info__c</columns>
        <columns>IsCheckedIn__c</columns>
        <columns>Seat__c</columns>
        <columns>Scanned_by__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Scanned_by__c</field>
            <operation>notEqual</operation>
            <value>Sravan Sravan,Radhachandan Chilamkurthy</value>
        </filters>
        <label>LICREE</label>
    </listViews>
    <listViews>
        <fullName>Special_Needs_Expo_LI</fullName>
        <columns>NAME</columns>
        <columns>Registration_Info__c</columns>
        <columns>IsCheckedIn__c</columns>
        <columns>Seat__c</columns>
        <columns>Scanned_by__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Scanned_by__c</field>
            <operation>notEqual</operation>
            <value>Sravan Sravan,Radhachandan Chilamkurthy,Mark Neuwirt</value>
        </filters>
        <filters>
            <field>IsCheckedIn__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Special Needs Expo LI</label>
    </listViews>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>Ticket Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Individual Ticket Info</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>